--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,33 +1,17 @@
-<article class="example">
-  <h1>HTML-фрагменты</h1>
+<form class="search-form" id="search-form">
+  <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
+  <button type="submit" class="btn btn-primary mb-2">Искать</button>
+</form>
 
-  <!-- Путь к изображениям из HTML-фрагмента такой, как из файла index.html -->
-  <img src="images/demo.jpg" alt="" width="320" />
-  <p>
-    Плагин
-    <a
-      href="https://github.com/posthtml/posthtml-include"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      posthtml-include
-    </a>
-    позволяет добавлять в HTML-файлы страниц код из других HTML-файлов (фрагментов). Фрагменты
-    хранятся в папке
-    <code>src/partials</code>. Добавление происходит при компиляции файлов страниц, например
-    <code>index.html</code>.
-  </p>
+<ul class="gallery"></ul>
+<div id="sentinel"></div>
 
-  <p>
-    Этот файл <code>example.html</code> &mdash; пример такого фрагмента, с разметкой определённой
-    части главной страницы. Это очень удобно при командной разработке на студенческих проектах,
-    когда в одном HTML-файле пишет несколько человек сразу.
-  </p>
+<!-- <button type="button" class="btn btn-primary button" data-action="load-more">
+  <span
+    class="spinner-border spinner-border-sm spinner is-hidden"
+    role="status"
+    aria-hidden="true"
+  ></span>
 
-  <p>
-    Синтаксис добавление фрагмента в главный файл:
-    <code> &lt;include src="./partials/имя-файла.html"&gt;&lt;/include&gt; </code>
-  </p>
-
-  <div class="background"></div>
-</article>
+  <span class="label">Показать ещё</span>
+</button> -->
